# UTL

./: .clang-format  .cppcheck  .gitignore  404.html  CMakeLists.txt  CMakePresets.json  LICENSE.html  README.md  actions.sh  dev_commit_style.html  dev_file_templates.html  dev_roadmap.html  dev_testing_toolchain.html  guide_building_docs.html  guide_building_project.html  guide_fetching_library.html  guide_license.html  guide_reproducing_figures.html  guide_reserved_names.html  guide_selecting_modules.html  guide_versioning.html  index.html  license.html  mkdocs.yml  module_assertion.html  module_bit.html  module_enum_reflect.html  module_integral.html  module_json.html  module_log.html  module_math.html  module_mvl.html  module_parallel.html  module_predef.html  module_profiler.html  module_progressbar.html  module_random.html  module_shell.html  module_sleep.html  module_stre.html  (+5 more)
auxiliary/: CMakeLists.txt
auxiliary/approx_distributions/: generate.cpp  plot.py
auxiliary/seed_correlation/: generate.cpp  plot.py
auxiliary/spectral_test/: generate.cpp  plot.py
benchmarks/: CMakeLists.txt  benchmark.hpp  benchmark_json.cpp  benchmark_log.cpp  benchmark_mvl.cpp  benchmark_parallel.cpp  benchmark_profiler.cpp  benchmark_random.cpp  common.hpp
benchmarks/module_json/: parse_serialize.cpp
benchmarks/module_log/: logging_overhead.cpp  stringification.cpp
benchmarks/module_mvl/: experimental.cpp
benchmarks/module_parallel/: parallel_repeated_matmul.cpp  parallel_vector_sum.cpp  thread_pool_comparison.cpp
benchmarks/module_profiler/: profiling_overhead.cpp
benchmarks/module_random/: normal_distributions.cpp  prngs.cpp  uniform_int_distributions.cpp  uniform_real_distributions.cpp
examples/: CMakeLists.txt
examples/module_assertion/: binary_assertion.cpp  default_message.cpp  logging_on_failure.cpp  unary_assertion.cpp
examples/module_bit/: additional_bitflag_examples.cpp  general_usage.cpp  using_enum_bitflags.cpp  working_with_individual_bits.cpp
examples/module_enum_reflect/: reflecting_an_enum.cpp
examples/module_integral/: heterogeneous_comparison.cpp  integer_division.cpp  integral_literals.cpp  narrow_cast.cpp  saturated_math.cpp  sign_conversion.cpp
examples/module_json/: complex_structure_reflection.cpp  error_handling.cpp  formatting.cpp  getters.cpp  parse_serialize_json.cpp  setters_and_type_conversions.cpp  structure_reflection.cpp
examples/module_log/: basic_logging.cpp  extending_formatter_for_custom_type_traits.cpp  extending_formatter_for_custom_types.cpp  formatting_modifiers.cpp  global_logger.cpp  local_logger.cpp  logging_objects.cpp  logging_to_multiple_sinks.cpp  logging_to_the_terminal.cpp  printing_and_stringification.cpp  sink_configuration.cpp
examples/module_math/: conversions.cpp  index_functions.cpp  summation_and_product.cpp  template_math_functions.cpp
examples/module_parallel/: awaitable_parallel_loop_with_specific_grain_size.cpp  awaitable_tasks.cpp  detached_tasks.cpp  launching_async_tasks.cpp  launching_async_tasks_with_future.cpp  parallel_for_loop.cpp  recursive_tasks.cpp  reducing_over_a_binary_operation.cpp  thread_introspection.cpp  using_a_local_thread_pool.cpp
examples/module_predef/: compilation_summary.cpp  conditional_compilation.cpp  optimization_macros.cpp
examples/module_profiler/: custom_style_and_exporting_results_to_a_file.cpp  profiling_code_segment.cpp  profiling_detached_threads_and_uploading_results.cpp  profiling_parallel_section.cpp  profiling_recursion.cpp
examples/module_progressbar/: progress_bar.cpp  progress_bar_with_custom_style.cpp
examples/module_random/: constexpr_random.cpp  getting_random_values.cpp  using_custom_prngs_with_random.cpp
examples/module_shell/: running_shell_commands.cpp  working_with_temporary_files.cpp
examples/module_sleep/: comparing_sleep_precision.cpp
examples/module_stre/: character_classification.cpp  converting_string_case.cpp  difference_measurement.cpp  escaping.cpp  other_utilities.cpp  padding_strings.cpp  repeating.cpp  substring_checks.cpp  substring_replacement.cpp  token_manipulation.cpp  tokenization.cpp  trimming.cpp  trimming_strings.cpp
examples/module_strong_type/: strongly_typed_integer_unit.cpp  wrapping_cstdio_file_handle.cpp  wrapping_opengl_shader_handle.cpp
examples/module_struct_reflect/: basic_reflection.cpp  debug_printing_with_utl_log.cpp  field_and_entry_views.cpp  iterating_over_a_generic_tuple.cpp  using_reflection_to_define_binary_operations.cpp
examples/module_table/: ascii_table.cpp  building_tables_cell_by_cell.cpp  csv_table.cpp  floating_point_formatting.cpp  latex_table.cpp  markdown_table.cpp  mathematica_table.cpp
examples/module_time/: accumulate_time.cpp  get_elapsed_time.cpp  get_local_date_and_time.cpp  set_timers.cpp
tests/: CMakeLists.txt  common.hpp  test.hpp  test_bit.cpp  test_enum_reflect.cpp  test_integral.cpp  test_json.cpp  test_log.cpp  test_math.cpp  test_mvl.cpp  test_random.cpp  test_shell.cpp  test_stre.cpp  test_struct_reflect.cpp
tests/general_odr/: main.cpp  second.cpp  second.hpp
tests/module_assertion/: assertions.cpp
tests/module_bit/: enum_bitflags.cpp  group_bit_operations.cpp  individual_bit_operations.cpp  utils.cpp
tests/module_enum_reflect/: reflection.cpp
tests/module_integral/: rounding_integer_division.cpp  saturated_math.cpp
tests/module_json/: conversions.cpp  object_node_api.cpp  parser_accepts_valid.cpp  parser_rejects_invalid.cpp  reflection.cpp
tests/module_log/: custom_sinks.cpp  custom_stringifier.cpp  stringifier.cpp  styling.cpp
tests/module_math/: functions.cpp
tests/module_mvl/: experimental.cpp
tests/module_parallel/: fuzzing.cpp  parallel_for_api.cpp  parallel_for_container.cpp  parallel_for_index_range.cpp  parallel_for_range.cpp  parallel_reduce_container.cpp  parallel_reduce_range.cpp  thread_pool_basics.cpp
tests/module_random/: mean_min_max_sanity.cpp  uniform_int_coverage.cpp  uniform_int_range.cpp  uniform_real_range.cpp
tests/module_shell/: shell_commands.cpp
tests/module_stre/: case_conversions.cpp  difference_measurement.cpp  (+10 more)
(+81 files in other folders)
